src/objects/CC_Module__mdt.object
<CustomObject>
    <description>Module object</description>
    <fields>
        <fullName>Component_with_Comment__c</fullName>
        <label>Component with Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Document_Types__c</fullName>
        <label>Document Types</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Home_Page_Redirection_App_User__c</fullName>
        <label>Home Page Redirection App User</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Home_Page_Redirection_Internal_User__c</fullName>
        <label>Home Page Redirection Internal User</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Home_Page_Redirection_Self_Service_User__c</fullName>
        <label>Home Page Redirection Self Service User</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Home_Page_Redirection_Svc_Provider_User__c</fullName>
        <label>Home Page Redirection Svc Provider User</label>
        <type>Url</type>
    </fields>
    <label>Module</label>
    <pluralLabel>Modules</pluralLabel>
</CustomObject>